--- a/inventory/intended/structured_configs/DC3-LEAF3-debug-vars.yml
+++ b/inventory/intended/structured_configs/DC3-LEAF3-debug-vars.yml
@@ -32,23 +32,6 @@ servers:
         description: PortChannel101
         mode: active
         raw_eos_cli: sflow enable
-  DC3-HOST2:
-    rack: LEAF_DOMAIN_1
-    adapters:
-    - endpoint_ports:
-      - Et1
-      - Et2
-      switch_ports:
-      - Ethernet1
-      - Ethernet1
-      switches:
-      - DC3-LEAF3
-      - DC3-LEAF4
-      profile: DC3_VLAN40
-      port_channel:
-        description: PortChanne101
-        mode: active
-        raw_eos_cli: sflow enable
 fabric_name: DC3_FABRIC
 cvp_instance_ip: apiserver.arista.io
 cvp_token_file: /mnt/flash/cv-onboarding-token
@@ -204,13 +187,6 @@ tenants:
             - border
             enabled: true
             ip_address_virtual: 10.40.40.1/24
-          80:
-            name: CORP_DC3_NEW
-            tags:
-            - compute
-            - border
-            enabled: true
-            ip_address_virtual: 10.80.80.1/24
         l3_interfaces:
         - interfaces:
           - Ethernet1
@@ -228,6 +204,24 @@ tenants:
           - DC3-BORDER2
           description: L3 Uplink to WAN for CORP VRF
           enabled: true
+        bgp_peers:
+          33.33.33.1:
+            peer_group: WAN
+            remote_as: 11111
+            nodes:
+            - DC3-BORDER1
+          33.33.33.5:
+            peer_group: WAN
+            remote_as: 22222
+            nodes:
+            - DC3-BORDER2
+        bgp_peer_groups:
+        - name: WAN
+          send_community: all
+          maximum_routes: 100000
+          nodes:
+          - DC3-BORDER1
+          - DC3-BORDER2
 type: l3leaf
 l3leaf:
   defaults:
@@ -667,7 +661,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,80
+        vlans: 10,40
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.1
         igmp_snooping_enabled: true
@@ -868,7 +862,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,80
+        vlans: 10,40
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.2
         igmp_snooping_enabled: true
@@ -1069,7 +1063,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,80
+        vlans: 10,40
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.3
         igmp_snooping_enabled: true
@@ -1270,7 +1264,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,80
+        vlans: 10,40
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.4
         igmp_snooping_enabled: true
@@ -1471,7 +1465,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,80
+        vlans: 10,40
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.127
         igmp_snooping_enabled: true
@@ -1672,7 +1666,7 @@ ansible_facts:
         enable_trunk_groups: false
         local_endpoint_trunk_groups: []
         endpoint_trunk_groups: []
-        vlans: 10,40,80
+        vlans: 10,40
         spanning_tree_mode: mstp
         overlay_rd_type_admin_subfield: 10.3.103.128
         igmp_snooping_enabled: true
@@ -2160,7 +2154,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,80
+      vlans: 10,40
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.1
       igmp_snooping_enabled: true
@@ -2361,7 +2355,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,80
+      vlans: 10,40
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.2
       igmp_snooping_enabled: true
@@ -2562,7 +2556,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,80
+      vlans: 10,40
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.3
       igmp_snooping_enabled: true
@@ -2763,7 +2757,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,80
+      vlans: 10,40
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.4
       igmp_snooping_enabled: true
@@ -2964,7 +2958,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,80
+      vlans: 10,40
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.127
       igmp_snooping_enabled: true
@@ -3165,7 +3159,7 @@ avd_switch_facts:
       enable_trunk_groups: false
       local_endpoint_trunk_groups: []
       endpoint_trunk_groups: []
-      vlans: 10,40,80
+      vlans: 10,40
       spanning_tree_mode: mstp
       overlay_rd_type_admin_subfield: 10.3.103.128
       igmp_snooping_enabled: true
@@ -3396,7 +3390,7 @@ switch:
   enable_trunk_groups: false
   local_endpoint_trunk_groups: []
   endpoint_trunk_groups: []
-  vlans: 10,40,80
+  vlans: 10,40
   spanning_tree_mode: mstp
   overlay_rd_type_admin_subfield: 10.3.103.3
   igmp_snooping_enabled: true
@@ -3583,7 +3577,7 @@ groups:
   - DC3-LEAF2
   - DC3-LEAF3
   - DC3-LEAF4
-omit: __omit_place_holder__0234127a01e59eaac285306f68c4c0a4ffdbe26b
+omit: __omit_place_holder__78b09996b691d0dc955e9b9b365abbc3a1debeaa
 ansible_version:
   string: 2.14.4
   full: 2.14.4
@@ -3597,5 +3591,5 @@ ansible_inventory_sources:
 - /workspaces/avd-demo/inventory/inventory.yml
 ansible_skip_tags: []
 ansible_run_tags:
-- build
+- provision
 ansible_verbosity: 0
