--- a/inventory/group_vars/DC3_TENANT_NETWORKS.yml
+++ b/inventory/group_vars/DC3_TENANT_NETWORKS.yml
@@ -26,11 +26,7 @@ tenants:
             tags: [compute,border]
             enabled: true
             ip_address_virtual: 10.40.40.1/24
-          80:
-            name: CORP_DC3_NEW
-            tags: [compute,border]
-            enabled: true
-            ip_address_virtual: 10.80.80.1/24
+        # WAN Peering Config to Border Leaves
         l3_interfaces:
           - interfaces: [ Ethernet1 ]
             ip_addresses: [ 33.33.33.2/30 ]
@@ -42,6 +38,20 @@ tenants:
             nodes: [ DC3-BORDER2 ]
             description: L3 Uplink to WAN for CORP VRF
             enabled: true
+        bgp_peers:
+          33.33.33.1:
+            peer_group: WAN
+            remote_as: 11111
+            nodes: [ DC3-BORDER1 ]
+          33.33.33.5:
+            peer_group: WAN
+            remote_as: 22222
+            nodes: [ DC3-BORDER2 ]
+        bgp_peer_groups:
+          - name: WAN
+            send_community: all
+            maximum_routes: 100000
+            nodes: [ DC3-BORDER1,DC3-BORDER2 ]
 #        static_routes:
 #          - destination_address_prefix: 0.0.0.0/0
 #            gateway: 192.168.110.1
