--- a/inventory/intended/configs/DC3-BORDER2.cfg
+++ b/inventory/intended/configs/DC3-BORDER2.cfg
@@ -69,9 +69,6 @@ vlan 10
 vlan 40
    name CORP_DC3
 !
-vlan 80
-   name CORP_DC3_NEW
-!
 vlan 3009
    name MLAG_iBGP_CORP
    trunk group LEAF_PEER_L3
@@ -156,12 +153,6 @@ interface Vlan40
    vrf CORP
    ip address virtual 10.40.40.1/24
 !
-interface Vlan80
-   description CORP_DC3_NEW
-   no shutdown
-   vrf CORP
-   ip address virtual 10.80.80.1/24
-!
 interface Vlan3009
    description MLAG_PEER_L3_iBGP: vrf CORP
    no shutdown
@@ -189,7 +180,6 @@ interface Vxlan1
    vxlan udp-port 4789
    vxlan vlan 10 vni 10010
    vxlan vlan 40 vni 10040
-   vxlan vlan 80 vni 10080
    vxlan vrf CORP vni 10
 !
 mac address-table aging-time 1300
@@ -252,6 +242,9 @@ router bgp 65316
    neighbor MLAG-IPv4-UNDERLAY-PEER send-community
    neighbor MLAG-IPv4-UNDERLAY-PEER maximum-routes 12000
    neighbor MLAG-IPv4-UNDERLAY-PEER route-map RM-MLAG-PEER-IN in
+   neighbor WAN peer group
+   neighbor WAN send-community
+   neighbor WAN maximum-routes 100000
    neighbor 10.3.1.252 peer group IPv4-UNDERLAY-PEERS
    neighbor 10.3.1.252 remote-as 65003
    neighbor 10.3.1.252 description DC3-SPINE1_Ethernet8/1
@@ -278,11 +271,6 @@ router bgp 65316
       route-target both 10040:10040
       redistribute learned
    !
-   vlan 80
-      rd 10.3.103.128:10080
-      route-target both 10080:10080
-      redistribute learned
-   !
    address-family evpn
       neighbor EVPN-OVERLAY-PEERS activate
    !
@@ -297,7 +285,12 @@ router bgp 65316
       route-target export evpn 10:10
       router-id 10.3.103.128
       neighbor 10.255.254.252 peer group MLAG-IPv4-UNDERLAY-PEER
+      neighbor 33.33.33.5 remote-as 22222
+      neighbor 33.33.33.5 peer group WAN
       redistribute connected
+      !
+      address-family ipv4
+         neighbor 33.33.33.5 activate
 !
 ip tacacs vrf management source-interface Management1
 !
